--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,11 @@ jobs:
 
       - name: Run Concatenation
         run: python ./concatenation.py
+
+      - name: Commit and Push if Changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add .
+          git commit -m "Automated data update" || echo "No changes to commit"
+          git push
