--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,4 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git add .
-          git commit -m "Automated data update" || echo "No changes to commit"
-          git push
+          git diff --quiet && git diff --staged --quiet || (git add . && git commit -m "Automated data update" && git push origin HEAD:main)
